--- a/FrontEnd/framer.html
+++ b/FrontEnd/framer.html
@@ -250,6 +250,24 @@
   border-radius: 16px;
 }
 
+ .button-primary {
+  width: 100%;
+  flex-shrink: 0;
+  height: 46px;
+  overflow: visible;
+  background-color: #f0b4b2;
+  border-radius: 8px;
+}
+  
+ .button-primary {
+  width: 100%;
+  flex-shrink: 0;
+  height: 46px;
+  overflow: visible;
+  background-color: var(--medium_pink, #f0b4b2);
+  border-radius: 8px;
+}
+  
 </style>
 </head>
 
